@@ -1,5 +1,5 @@
 /* crypto/stack/stack.h */
-/* Copyright (C) 1995-1997 Eric Young (eay@cryptsoft.com)
+/* Copyright (C) 1995-1998 Eric Young (eay@cryptsoft.com)
  * All rights reserved.
  *
  * This package is an SSL implementation written
@@ -73,8 +73,8 @@ typedef struct stack_st
 	int (*comp)();
 	} STACK;
 
-#define sk_num(sk)	((sk)->num)
-#define sk_value(sk,n)	((sk)->data[n])
+#define sk_num(sk)		((sk)->num)
+#define sk_value(sk,n)		((sk)->data[n])
 
 #define sk_new_null()	sk_new(NULL)
 #ifndef NOPROTO
@@ -91,7 +91,7 @@ int sk_unshift(STACK *st,char *data);
 char *sk_shift(STACK *st);
 char *sk_pop(STACK *st);
 void sk_zero(STACK *st);
-void sk_set_cmp_func(STACK *sk, int (*c)());
+int (*sk_set_cmp_func(STACK *sk, int (*c)()))();
 STACK *sk_dup(STACK *st);
 
 #else
@@ -108,7 +108,7 @@ int sk_unshift();
 char *sk_shift();
 char *sk_pop();
 void sk_zero();
-void sk_set_cmp_func();
+int (*sk_set_cmp_func())();
 STACK *sk_dup();
 
 #endif
