@@ -1,7 +1,7 @@
 PROJECT_NAME=OpenSSL
 GENERATE_LATEX=no
 OUTPUT_DIRECTORY=doxygen
-INPUT=ssl
+INPUT=ssl include
 FILE_PATTERNS=*.c *.h
 RECURSIVE=yes
 PREDEFINED=DOXYGEN
