@@ -5,6 +5,14 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Add new certificate file to stack functions, SSL_add_cert_file_to_stack()
+     and SSL_add_cert_dir_to_stack(). These largely supplant
+     SSL_load_client_CA_file(), and can be used to add multiple certs easily to
+     a stack (usually this is then handed to SSL_CTX_set_client_CA_list()).
+     This means that Apache-SSL and similar packages don't have to mess around
+     to add as many CAs as they want to the preferred list.
+     [Ben Laurie]
+
   *) Experiment with doxygen documentation. Currently only partially applied to
      ssl/ssl_lib.c.
      See http://www.stack.nl/~dimitri/doxygen/index.html, and run doxygen with
